<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Bi-Secure</string>
    <string name="author_name" translatable="false">Frozen Developers</string>
    <string name="action_clean">Clean</string>
    <string name="action_rescan">Rescan</string>
    <string name="action_search">Search</string>
    <string name="action_sort_by_name">Sort by name</string>
    <string name="action_sort_by_size">Sort by size</string>
    <string name="action_settings">Settings</string>
    <string name="apps_list_header_title">Device memory</string>
    <string name="apps_list_header_used_prefix">Used</string>
    <string name="apps_list_header_cache_prefix">Cache</string>
    <string name="apps_list_header_free_prefix">Free</string>
    <string name="apps_list_header_footer">App cache usage</string>
    <string name="apps_list_header_memory"><xliff:g id="memory">%1$s</xliff:g></string>
    <string name="empty_cache">Cache is empty.</string>
    <string name="no_such_app">No such application.</string>
    <string name="scanning">SCANNING %1$d</string>
    <string name="scanning_m_of_n">Scanning %1$d/%2$d</string>
    <string name="cleaning_cache">Cleaning cache</string>
    <string name="cleaning_in_progress">Cleaning in progress…</string>
    <string name="cleaned">Cache cleaned</string>
    <string name="toast_could_not_clean">Could not clean the cache</string>
    <string name="toast_could_not_clean_reason">Could not clean the cache: %1$s</string>
    <string name="settings">Settings</string>
    <string name="main_preferences">Main preferences</string>
    <string name="about">About</string>
    <string name="clean_on_app_startup">Clean on app startup</string>
    <string name="clean_on_app_startup_summary">Automatically clean cache on application startup</string>
    <string name="clean_on_app_startup_key" translatable="false">clean_on_app_startup</string>
    <string name="exit_after_clean">Exit after clean up</string>
    <string name="exit_after_clean_summary">Exit after Clean button is clicked and clean up is completed</string>
    <string name="exit_after_clean_key" translatable="false">exit_after_clean</string>
    <string name="clean_on_system_startup">Clean on system startup</string>
    <string name="clean_on_system_startup_summary">Automatically clean cache on system startup</string>
    <string name="clean_on_system_startup_key" translatable="false">clean_on_device_startup</string>
    <string name="about_app">About Cache Cleaner</string>
    <string name="author">Author</string>
    <string name="version_number">Version number</string>
    <string name="version_number_unknown">Unknown</string>
    <string name="open_source_licences">Open source licences</string>
    <string name="special_thanks">Special thanks</string>
    <string name="samuels_graphics" translatable="false">Samuel\'s Graphics</string>
    <string name="samuels_graphics_desc">Icon and Play Store banner design</string>
    <string name="sort_by_key" translatable="false">sort_by</string>
    <string name="rationale_title">Insufficient permissions</string>
    <string name="rationale_storage">Storage permission is needed to clean external cache.</string>
    <string name="please_wait">Please Wait..</string>
    <string name="reg_submit">Submit</string>
    <string name="login">Log In</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="si_no">SI Number</string>
    <string name="user_name">Name</string>
    <string name="login_mobile">Registered Mobile No.</string>
    <string name="login_pwd">Password</string>
    <string name="lite">Lite</string>
    <string name="subscription_status">Subscription Status:</string>
    <string name="product_name">Product: Bi-Secure</string>
    <string name="more">More Bi-Secure</string>
    <string name="connection_manager_fail">We apologize, a technical error has occurred. Please check your internet connection.</string>
    <string name="reg_invalid_mobile">Invalid Mobile no</string>
    <string name="fill_mobile_number">Please fill mobile number</string>
    <string name="fill_si_number">Please fill serial number</string>
    <string name="fill_user_name">Please fill user name</string>
    <string name="fill_login_pwd">Please fill password</string>
    <string name="wrong_pwd">Please enter a correct password</string>
    <string name="fill_check_privacy">Please check privacy policy</string>
    <string name="privacy_msg">I want to join Bi-Secure community watch in the fight
        against cybercrime by letting my device automatically forward security information to Birina (Recommended).</string>
    <string name="privacy_dialog_header">Bi-Secure privacy policy</string>
    <string name="antivirus">Anti-virus</string>
    <string name="phone_booster">Phone Booster</string>
    <string name="trap">Track</string>
    <string name="backup">Cloud Backup</string>
    <string name="restore">Cloud Restore</string>
    <string name="data_wipe">Remote Wipe</string>
    <string name="antitheft">Remote Lock</string>
    <string name="sim_alert">SIM Alert</string>
    <string name="tracking_recover">Location Tracker</string>
    <string name="unplug_charger">Unplugged Charger Alarm</string>
    <string name="remote_screaming">Remote Screaming</string>
    <string name="ota_update">O.T.A. Update</string>
    <string name="banking_protection">Banking Protection</string>
    <string name="real_time_protection">Real Time Protection</string>
    <string name="pocket_theft">Anti-Theft</string>
    <string name="dashboard_heading">Antivirus &amp; Mobile Security</string>
    <string name="clean_now">Clean now</string>
    <string name="clear_junk">Clear Cache</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="folder_selection">Folder Selection</string>
    <string name="device_storage">Device Storage</string>
    <string name="internal_storage">External Storage</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="backup_allow">Allow Cloud Backup?</string>
    <string name="restore_allow">Allow Cloud Restore?</string>
    <string name="agree">Always allow from this device</string>
    <string name="scanning_msg">Safety Scanning </string>
    <string name="allow_scanning">Allow Antivirus Scanning </string>
    <string name="device_sequre">Device is secure</string>
    <string name="scanning_complete">Scan Complete </string>
    <string name="resolved">Resolved </string>
    <string name="not_resolved">Not Resolved </string>
    <string name="quarantined">Quarantined</string>
    <string name="scan_complete">Scan Complete</string>
    <string name="no_thread">No Threats Detected</string>
    <string name="thread"> <font fgcolor="red">0</font> Threats Detected</string>
    <string name="track_otp">SET PASSWORD</string>
    <string name="track_mobile">Mobile</string>
    <string name="track_password">RECOVERY PASSWORD</string>
    <string name="track_fail">Please enter a valid password</string>
    <string name="track_empty">Please enter a password</string>
    <string name="track_msg">It seems your tracking is activated and you have already set recovery password.\nIf you want to reset
        recovery password click on reset link.</string>
    <string name="btn_reset"><u>Reset?</u></string>
    <string name="fill_pwd_number">Please enter tracking code</string>
    <string name="fill_otp">Please enter OTP</string>
    <string name="service_desc">Accessibility service</string>
    <string name="track_unlock">Unlock</string>
    <string name="track_warning">Activating Location Tracker helps users to track their devices location if the device been lost or stolen.\n\n

Just type \'TRACKLOCATION\' <i>space \"yourloginpassword\" </i> and send it to your mobile number. Remember, your password should be the same which you have already registered during Login.\n\n

If your device is ON or whenever it receives the SMS it will send an auto-generated SMS notification as well as a mail to the registered mail id containing the link of last geo-location of your device.

</string>
    <string name="response_null">Response is null</string>
    <string name="backup_complete">Backup created successful</string>
    <string name="backup_msg"> Backup in progress.</string>
    <string name="backup_date"> Last backup </string>
    <string name="backup_sms">Sms on device</string>
    <string name="backup_contact">Contacts on device</string>
    <string name="restore_success">Restore contact successful</string>
    <string name="contact_not_available">It seems data not available. Please try again later</string>
    <string name="backup_failed">It seems there is some technical problem. Please try again later</string>
    <string name="restore_msg"> Data Restoring in progress </string>
    <string name="restore_complete"> Data restore successfully</string>
    <string name="restore_date"> Last restore </string>
    <string name="restore_sms">Sms restore on device</string>
    <string name="restore_contact">Contacts restore on device</string>
    <string name="system_advisor">System Advisor</string>
    <string name="system_scanning">Scanning in Progress</string>
    <string name="no_risk">No risks found</string>
    <string name="advisor_detail">System advisor alert you about operating system threats
        that allow attackers to access your device and your data.</string>
    <string name="no_untrusted">No untrusted certificates detected</string>
    <string name="no_rooted">No rooted device detected</string>
    <string name="no_krack">No KRACK vulnerability detected</string>
    <string name="reg_heading">REGISTER</string>
    <string name="gender">Gender :</string>
    <string name="dob">DOB :</string>
    <string name="dob_hint">DD/MM/YEAR</string>
    <string name="reg_mobile">Mobile</string>
    <string name="reg_email">Email ID</string>
    <string name="reg_si_number">Serial No.</string>
    <string name="reg_sign_up">Sign Up</string>
    <string name="reg_or">OR</string>
    <string name="reg_login">Login</string>
    <string name="fill_pwd">Please fill create password</string>
    <string name="fill_conf_pwd">Please fill confirm password</string>
    <string name="fill_gender">Please enter Gender</string>
    <string name="fill_dob">Please enter Date of Birth</string>
    <string name="password_not_match">Create password and confirm password are not the same</string>
    <string name="password_lenght_match">Password should be more than 5 characters</string>
    <string name="pockettheft">Anti-Theft</string>
    <string name="pocket_theft_description">This feature is designed to protect the user from theft and unauthorized device access. It helps the device to trigger a loud siren if some one try to access your device. The feature will work even if it is in silent mode as well.</string>
    <string name="active_inactive">ACTIVE/INACTIVE</string>
    <string name="active">ACTIVE</string>
    <string name="home">Home</string>
    <string name="go_to_dashboard">Dashboard</string>
    <string name="inactive">INACTIVE</string>
    <string name="alarm_off">ALARM OFF</string>
    <string name="off">Off</string>
    <string name="unPlug_charger_description">This feature is designed to protect the theft of device during charging. It helps the device to trigger a loud siren if it is unplugged from the charger. This feature will work even if your phone is in silent mode.</string>
    <string name="unplug_charger_heading">Unplug Charger Alert</string>
    <string name="unplug_charger_active">Unplug Alert</string>
    <string name="btn_reset_remote_screaming">Reset Mobile Number</string>
    <string name="reset">Reset</string>
</resources>