<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:focusableInTouchMode="true"
    android:focusable="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/loginperant"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/textPhoneBoost"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableTop="@mipmap/phoon_booster"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/phone_booster"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black_bg"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingTop="@dimen/_10sdp"
                />

            <TextView
                android:id="@+id/textAntivirus"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableTop="@mipmap/antivirus"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/antivirus"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black_bg"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingTop="@dimen/_10sdp"
                />


            <TextView
                android:id="@+id/textPocketTheft"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableTop="@mipmap/pocket_theft"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/pocket_theft"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black_bg"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingTop="@dimen/_10sdp"
                />



            <TextView
                android:id="@+id/textSimAlert"
                android:layout_below="@id/textPhoneBoost"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableTop="@mipmap/sim_alert"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sim_alert"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black_bg"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:paddingTop="@dimen/_10sdp"
                />


            <TextView
                android:id="@+id/textTrackingRecovery"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableTop="@mipmap/tracking_recovery"
                android:layout_below="@id/textAntivirus"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tracking_recover"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black_bg"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_40sdp"
                android:paddingTop="@dimen/_10sdp"
                />
            <TextView
                android:id="@+id/textUnPlugCharger"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableTop="@mipmap/unplug_charger"
                android:layout_below="@id/textPocketTheft"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/unplug_charger"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black_bg"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:paddingTop="@dimen/_10sdp"
                />


            <TextView
                android:id="@+id/textRemoteScreaming"
                android:layout_below="@id/textSimAlert"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableTop="@mipmap/remote_screaming"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/remote_screaming"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black_bg"
                android:layout_marginTop="@dimen/_40sdp"
                android:paddingTop="@dimen/_10sdp"
                />

            <TextView
                android:id="@+id/textBackup"
                android:layout_below="@id/textTrackingRecovery"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableTop="@mipmap/cloud_backup"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/backup"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black_bg"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_40sdp"
                android:paddingTop="@dimen/_10sdp"
                />


            <TextView
                android:id="@+id/textRestoreData"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableTop="@mipmap/cloud_restore"
                android:layout_below="@id/textTrackingRecovery"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/restore"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black_bg"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:paddingTop="@dimen/_10sdp"
                />

            <TextView
                android:id="@+id/textDataWipe"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableTop="@mipmap/remote_wipe"
                android:layout_below="@id/textRemoteScreaming"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="@string/data_wipe"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black_bg"
                android:layout_marginTop="@dimen/_40sdp"
                android:paddingTop="@dimen/_10sdp"
                />


            <TextView
                android:id="@+id/textAntitheft"
                android:layout_below="@id/textBackup"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableTop="@mipmap/remote_lock"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/antitheft"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black_bg"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_40sdp"
                android:paddingTop="@dimen/_10sdp"
                />



            <TextView
                android:id="@+id/textRealtimeProtection"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableTop="@mipmap/real_time_protectio"
                android:layout_below="@id/textRestoreData"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/real_time_protection"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black_bg"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:paddingTop="@dimen/_10sdp"

                />

        </RelativeLayout>



    </LinearLayout>


</RelativeLayout>
