<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginperant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:layout_marginTop="?attr/actionBarSize">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:id="@+id/imageViewParent"
        android:background="@color/colorPrimary"
        >
        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/main_logo" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/reg_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageViewParent"
        android:orientation="vertical"
        android:paddingTop="@dimen/_5sdp"
        android:paddingLeft="@dimen/_18sdp"
        android:paddingRight="@dimen/_18sdp"
        android:visibility="visible"
        >


        <TextView
            android:id="@+id/textDeviceStorage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/track_warning"
            android:textColor="@color/black_bg"
            android:textSize="@dimen/_14sdp"

            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp">

            <EditText
                android:id="@+id/trackPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/track_mobile"
                android:textSize="@dimen/_10sdp"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/otpWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp">

            <EditText
                android:id="@+id/trackOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/track_otp"
                android:textSize="@dimen/_10sdp"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:maxLines="1"
               />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/trackPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/track_password"
                android:textSize="@dimen/_10sdp"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:inputType="text"
                />


        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/rounded_trans"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/reg_submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/reset_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewParent"
        android:layout_marginTop="@dimen/_30sdp"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/resetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/_20sdp"
            android:paddingLeft="@dimen/_20sdp"
            android:hint="@string/track_msg"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/black_bg"
            />


        <TextView
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_below="@id/resetText"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/btn_reset"
            android:textColor="@color/apps_list_cache_memory"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

    </RelativeLayout>


</RelativeLayout>
